--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ matlab.mat
 private/grayxform.mexa64
 private/grayxformmex.mexa64
 private/imhistc.mexa64
-test/030*.mat
-test/031*.mat
-test/250*.mat
-test/251*.mat
+test/03*.mat
+test/25*.mat
+test/*/*.mat
+test/*/*.fig
