Cleaned up testing subdirectory and debug script

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,4 @@ matlab.mat
 private/grayxform.mexa64
 private/grayxformmex.mexa64
 private/imhistc.mexa64
-test/03*.mat
-test/25*.mat
-test/*/*.mat
-test/*/*.fig
+test/wedge/*.mat
