--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 *~
 .*.swp
-test_data
-matlab.mat
-*.nc
-private/grayxform.mexa64
-private/grayxformmex.mexa64
-private/imhistc.mexa64
+private/*.mexa64
 *.mat
 *.png
 temp/*
+share/*
