experiment: patched input file to match current format

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
-private/
 *~
 .*.swp
 *.mexa64
 *.mexw64
-temp/*
 *.mat
 **/html
 *.asv
-standalone/*
-tmp/*
-experiment/*
+experiment/choose-fill
+experiment/fill-initial-guess
+experiment/mark-patched-image-file
+experiment/matfile-performance
+experiment/pattern_fill
+experiment/thin-skin-fill-first
+experiment/thin-skin-mirror
+experiment/thin-skin-repeat
+experiment/warp-padding-dev
+
+
